--- a/SeleniumFrameworkDesign/pom.xml
+++ b/SeleniumFrameworkDesign/pom.xml
@@ -26,13 +26,15 @@
     <version>4.4.0</version>
 </dependency>
     
-    <!-- https://mvnrepository.com/artifact/org.testng/testng -->
+<!-- https://mvnrepository.com/artifact/org.testng/testng -->
 <dependency>
     <groupId>org.testng</groupId>
     <artifactId>testng</artifactId>
     <version>7.6.1</version>
     <scope>test</scope>
 </dependency>
+
+
 
 <!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-databind -->
 <dependency>
@@ -49,6 +51,12 @@
     <version>5.2.3</version>
 </dependency>
 
+<!-- https://mvnrepository.com/artifact/com.aventstack/extentreports -->
+<dependency>
+    <groupId>com.aventstack</groupId>
+    <artifactId>extentreports</artifactId>
+    <version>5.0.9</version>
+</dependency>
 
        
  </dependencies>
