--- a/SeleniumFrameworkDesign/pom.xml
+++ b/SeleniumFrameworkDesign/pom.xml
@@ -25,6 +25,21 @@
     <artifactId>selenium-java</artifactId>
     <version>4.4.0</version>
 </dependency>
+
+<!-- https://mvnrepository.com/artifact/io.cucumber/cucumber-java -->
+<dependency>
+    <groupId>io.cucumber</groupId>
+    <artifactId>cucumber-java</artifactId>
+    <version>7.5.0</version>
+</dependency>
+
+
+<!-- https://mvnrepository.com/artifact/io.cucumber/cucumber-testng -->
+<dependency>
+    <groupId>io.cucumber</groupId>
+    <artifactId>cucumber-testng</artifactId>
+    <version>7.5.0</version>
+</dependency>
     
 <!-- https://mvnrepository.com/artifact/org.testng/testng -->
 <dependency>
